Use List.of instead of Collections.singletonlist